--- a/package.json
+++ b/package.json
@@ -138,13 +138,14 @@
     "prepublishOnlyProduction": "npm run cleanBuildProduction && npm pkg delete devDependencies scripts types && npx rimraf ./node_modules && npm install --omit=dev && npm shrinkwrap",
     "npmPack": "copy package.json package.log && npm run prepublishOnlyProduction && npm pack && copy package.log package.json && npm run deepCleanBuild",
     "npmPublishTagDev": "copy package.json package.log && npm run prepublishOnlyProduction && npm publish --tag dev && copy package.log package.json && npm run deepCleanBuild",
+    "npmPublishTagEdge": "copy package.json package.log && npm run prepublishOnlyProduction && npm publish --tag edge && copy package.log package.json && npm run deepCleanBuild",
     "npmPublishTagLatest": "copy package.json package.log && npm run prepublishOnlyProduction && npm publish --tag latest && copy package.log package.json && npm run deepCleanBuild",
     "checkDependencies": "npx npm-check-updates",
     "updateDependencies": "npx npm-check-updates -u && npm run deepCleanBuild",
     "updateMatter:latest": "npm install @matter/main@latest && npm install && npm run deepCleanBuild",
     "updateMatter:dev": "npm install @matter/main@dev && npm install && npm run deepCleanBuild",
     "updateMatter:loc": "npm install ../matter.js/packages/matter.js && npm install && npm run deepCleanBuild",
-    "install:dependencies": "npm install @matter/main @matter/nodejs @project-chip/matter.js archiver express glob https node-ansi-logger node-persist-manager ws",
+    "install:dependencies": "npm install @matter/main archiver express@4.21.2 glob node-ansi-logger node-persist-manager ws",
     "install:typescript": "npm install --save-dev @types/express @types/node @types/ws typescript && npm run build",
     "install:eslint": "npm uninstall eslint @types/eslint__js && npm install --save-dev @eslint/js typescript-eslint && npm run lint",
     "install:prettier": "npm install --save-dev prettier eslint-config-prettier eslint-plugin-prettier && npm run format",
@@ -155,7 +156,6 @@
     "archiver": "7.0.1",
     "express": "4.21.2",
     "glob": "11.0.1",
-    "https": "1.0.0",
     "multer": "1.4.5-lts.2",
     "node-ansi-logger": "3.0.1",
     "node-persist-manager": "1.0.8",
