--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "matterbridge",
-  "version": "2.2.9-dev.1",
+  "version": "2.2.9",
   "description": "Matterbridge plugin manager for Matter",
   "author": "https://github.com/Luligu",
   "license": "Apache-2.0",
@@ -158,7 +158,7 @@
     "glob": "11.0.1",
     "multer": "1.4.5-lts.2",
     "node-ansi-logger": "3.0.1",
-    "node-persist-manager": "1.0.8", 
+    "node-persist-manager": "1.0.8",
     "ws": "8.18.1"
   },
   "devDependencies": {
