--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "matterbridge",
-  "version": "3.0.0-edge.9",
+  "version": "3.0.0-edge.10",
   "description": "Matterbridge plugin manager for Matter",
   "author": "https://github.com/Luligu",
   "license": "Apache-2.0",
@@ -152,9 +152,9 @@
     "install:jest": "npm install --save-dev jest ts-jest @types/jest eslint-plugin-jest && npm run test"
   },
   "dependencies": {
-    "@matter/main": "0.13.0-alpha.0-20250415-475996bb5",
+    "@matter/main": "^0.13.0-alpha.0-20250418-8cfc0b832",
     "archiver": "7.0.1",
-    "express": "4.21.2",
+    "express": "5.1.0",
     "glob": "11.0.1",
     "multer": "1.4.5-lts.2",
     "node-ansi-logger": "3.0.1",
@@ -167,9 +167,9 @@
     "@types/express": "5.0.1",
     "@types/jest": "29.5.14",
     "@types/multer": "1.4.12",
-    "@types/node": "22.14.0",
+    "@types/node": "22.14.1",
     "@types/ws": "8.18.1",
-    "eslint-config-prettier": "10.1.1",
+    "eslint-config-prettier": "10.1.2",
     "eslint-plugin-jest": "28.11.0",
     "eslint-plugin-n": "17.17.0",
     "eslint-plugin-prettier": "5.2.6",
@@ -177,8 +177,8 @@
     "eslint-plugin-react-hooks": "5.2.0",
     "jest": "29.7.0",
     "prettier": "3.5.3",
-    "ts-jest": "29.3.1",
+    "ts-jest": "29.3.2",
     "typescript": "5.8.3",
-    "typescript-eslint": "8.29.1"
+    "typescript-eslint": "8.30.1"
   }
 }
