--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "matterbridge",
-  "version": "3.0.0-edge.12",
+  "version": "3.0.0-edge.13",
   "description": "Matterbridge plugin manager for Matter",
   "author": "https://github.com/Luligu",
   "license": "Apache-2.0",
@@ -152,7 +152,7 @@
     "install:jest": "npm install --save-dev jest ts-jest @types/jest eslint-plugin-jest && npm run test"
   },
   "dependencies": {
-    "@matter/main": "0.13.0-alpha.0-20250420-9f45e4f77",
+    "@matter/main": "^0.13.0-alpha.0-20250423-8917d1d1d",
     "archiver": "7.0.1",
     "express": "5.1.0",
     "glob": "11.0.1",
