--- a/.github/workflows/docker-buildx-dev.yml
+++ b/.github/workflows/docker-buildx-dev.yml
@@ -13,56 +13,55 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v4
+      - name: Checkout code
+        uses: actions/checkout@v4
 
-    - uses: actions/setup-node@v4
-      with:
-        node-version: '22.x'
+      - uses: actions/setup-node@v4
+        with:
+          node-version: '22.x'
 
-    - name: Log in to Docker Hub
-      uses: docker/login-action@v3
-      with:
-        username: ${{ secrets.DOCKER_USERNAME }}
-        password: ${{ secrets.DOCKER_PASSWORD }}
+      - name: Log in to Docker Hub
+        uses: docker/login-action@v3
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
 
-    - name: Set up QEMU
-      uses: docker/setup-qemu-action@v3
-      with:
-        platforms: all
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v3
+        with:
+          platforms: all
 
-    - name: Set up Docker Buildx
-      uses: docker/setup-buildx-action@v3
-      with:
-        version: latest
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+        with:
+          version: latest
 
-    - name: Extract version from package.json
-      id: extract_version
-      run: |
-        VERSION=$(jq -r '.version' package.json)
-        echo "VERSION=$VERSION" >> $GITHUB_ENV
-  
-    - name: Echo main version ${{ env.VERSION }}
-      run: |
-        echo "Extracted version is: $VERSION ${{ env.VERSION }}"
- 
-    - name: Run Docker Buildx on dev
-      run: |
-        docker buildx build \
-          --platform linux/amd64,linux/arm64,linux/arm/v7 \
-          -f docker/Dockerfile.dev \
-          -t luligu/matterbridge:dev \
-          --push .
-        docker manifest inspect luligu/matterbridge:dev
-      timeout-minutes: 60 
+      - name: Extract version from package.json
+        id: extract_version
+        run: |
+          VERSION=$(jq -r '.version' package.json)
+          echo "VERSION=$VERSION" >> $GITHUB_ENV
 
-    - name: Run Docker Buildx on test
-      run: |
-        docker buildx build \
-          --platform linux/amd64,linux/arm64,linux/arm/v7 \
-          -f docker/Dockerfile.latest \
-          -t luligu/matterbridge:test \
-          --push .
-        docker manifest inspect luligu/matterbridge:test
-      timeout-minutes: 60 
+      - name: Echo main version ${{ env.VERSION }}
+        run: |
+          echo "Extracted version is: $VERSION ${{ env.VERSION }}"
 
+      - name: Run Docker Buildx on dev
+        run: |
+          docker buildx build \
+            --platform linux/amd64,linux/arm64,linux/arm/v7 \
+            -f docker/Dockerfile.dev \
+            -t luligu/matterbridge:dev \
+            --push .
+          docker manifest inspect luligu/matterbridge:dev
+        timeout-minutes: 60
+
+      - name: Run Docker Buildx on test
+        run: |
+          docker buildx build \
+            --platform linux/amd64,linux/arm64,linux/arm/v7 \
+            -f docker/Dockerfile.test \
+            -t luligu/matterbridge:test \
+            --push .
+          docker manifest inspect luligu/matterbridge:test
+        timeout-minutes: 60
