--- a/docker/Dockerfile.test
+++ b/docker/Dockerfile.test
@@ -1,10 +1,12 @@
 FROM node:22-bookworm-slim
+
 RUN npm install -g npm@latest && \
     npm install -g --omit=dev matterbridge \
     matterbridge-zigbee2mqtt \
     matterbridge-somfy-tahoma \
     matterbridge-shelly \
     matterbridge-hass \
+    matterbridge-webhooks \
     matterbridge-example-accessory-platform \
     matterbridge-example-dynamic-platform \
     matterbridge-eve-door \
