--- a/.gitignore
+++ b/.gitignore
@@ -29,7 +29,7 @@ tsconfig.tsbuildinfo
 *.nar
 *.ear
 *.zip
-*.tar.gz
+# *.tar.gz
 *.rar
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
