--- a/package.json
+++ b/package.json
@@ -152,22 +152,22 @@
     "install:jest": "npm install --save-dev jest ts-jest @types/jest eslint-plugin-jest && npm run test"
   },
   "dependencies": {
-    "@matter/main": "^0.13.0-alpha.0-20250425-94b33ff98",
+    "@matter/main": "0.13.0-alpha.0-20250427-e7df8aa45",
     "archiver": "7.0.1",
     "express": "5.1.0",
-    "glob": "11.0.1",
+    "glob": "11.0.2",
     "multer": "1.4.5-lts.2",
     "node-ansi-logger": "3.0.1",
     "node-persist-manager": "1.0.8",
     "ws": "8.18.1"
   },
   "devDependencies": {
-    "@eslint/js": "9.25.0",
+    "@eslint/js": "9.25.1",
     "@types/archiver": "6.0.3",
     "@types/express": "5.0.1",
     "@types/jest": "29.5.14",
     "@types/multer": "1.4.12",
-    "@types/node": "22.14.1",
+    "@types/node": "22.15.2",
     "@types/ws": "8.18.1",
     "eslint-config-prettier": "10.1.2",
     "eslint-plugin-jest": "28.11.0",
@@ -179,6 +179,6 @@
     "prettier": "3.5.3",
     "ts-jest": "29.3.2",
     "typescript": "5.8.3",
-    "typescript-eslint": "8.30.1"
+    "typescript-eslint": "8.31.0"
   }
 }
