--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "matterbridge",
-  "version": "3.0.0-edge.15",
+  "version": "3.0.0-edge.16",
   "description": "Matterbridge plugin manager for Matter",
   "author": "https://github.com/Luligu",
   "license": "Apache-2.0",
@@ -152,7 +152,7 @@
     "install:jest": "npm install --save-dev jest ts-jest @types/jest eslint-plugin-jest && npm run test"
   },
   "dependencies": {
-    "@matter/main": "0.13.0-alpha.0-20250427-e7df8aa45",
+    "@matter/main": "0.13.0",
     "archiver": "7.0.1",
     "express": "5.1.0",
     "glob": "11.0.2",
@@ -167,7 +167,7 @@
     "@types/express": "5.0.1",
     "@types/jest": "29.5.14",
     "@types/multer": "1.4.12",
-    "@types/node": "22.15.2",
+    "@types/node": "22.15.3",
     "@types/ws": "8.18.1",
     "eslint-config-prettier": "10.1.2",
     "eslint-plugin-jest": "28.11.0",
@@ -179,6 +179,6 @@
     "prettier": "3.5.3",
     "ts-jest": "29.3.2",
     "typescript": "5.8.3",
-    "typescript-eslint": "8.31.0"
+    "typescript-eslint": "8.31.1"
   }
 }
