--- a/.github/workflows/docker-buildx-edge.yml
+++ b/.github/workflows/docker-buildx-edge.yml
@@ -49,7 +49,7 @@ jobs:
       - name: Run Docker Buildx on edge
         run: |
           docker buildx build \
-            --platform linux/amd64,linux/arm64 \
+            --platform linux/amd64,linux/arm64,linux/arm/v7 \
             -f docker/Dockerfile.edge \
             -t luligu/matterbridge:edge \
             --push .
