--- a/docker/Dockerfile.dev
+++ b/docker/Dockerfile.dev
@@ -1,15 +1,13 @@
-FROM node:22-bookworm-slim AS base
+# ─────────────── BUILD STAGE ───────────────
+FROM node:22-bookworm-slim AS builder
 
-WORKDIR /app
+# 🛠️ Set noninteractive frontend
+ENV DEBIAN_FRONTEND=noninteractive
+
+# Install git
 RUN apt-get update && \
-    DEBIAN_FRONTEND=noninteractive apt-get install -y --no-install-recommends git && \
-    apt-get clean && \
-    node -v && \
-    npm -v
+    apt-get install -y --no-install-recommends git
 
-
-
-FROM base AS builder
 WORKDIR /app
 COPY ./package.json ./package-lock.json ./tsconfig.json ./tsconfig.production.json ./.npmignore ./
 COPY ./src ./src
@@ -72,14 +70,20 @@ WORKDIR /app
 RUN npm run cleanBuildProduction && npm pkg delete devDependencies scripts types && npm install --omit=dev && npm shrinkwrap && npm pack 
 
 
+# ─────────────── RUNTIME STAGE ───────────────
 FROM node:22-bookworm-slim AS release
-WORKDIR /app
 
+# 🛠️ Set noninteractive frontend
+ENV DEBIAN_FRONTEND=noninteractive
+
+# Install curl for healthcheck
 RUN apt-get update && \
-    DEBIAN_FRONTEND=noninteractive apt-get install -y --no-install-recommends curl && \
+    apt-get install -y --no-install-recommends curl && \
     apt-get clean && \
     rm -rf /var/lib/apt/lists/*
-    
+
+WORKDIR /app
+
 COPY --from=builder /app/*.tgz .
 RUN npm install -g npm@latest && npm install -g --omit=dev *.tgz && rm *.tgz
 
@@ -96,10 +100,18 @@ COPY --from=builder /matterbridge-eve-motion/*.tgz .
 COPY --from=builder /matterbridge-eve-energy/*.tgz .
 COPY --from=builder /matterbridge-eve-room/*.tgz .
 COPY --from=builder /matterbridge-eve-weather/*.tgz .
-RUN npm install -g --omit=dev *.tgz && rm *.tgz && node -v && npm -v && npm list -g && npm cache clean --force && rm -rf /tmp/* /var/tmp/* /root/.npm /root/.cache && apt-get clean && rm -rf /var/lib/apt/lists/*
+RUN npm install -g --omit=dev *.tgz && \
+  rm *.tgz && \
+  node -v && \
+  npm -v && \
+  npm list -g && \
+  npm cache clean --force && \
+  apt-get clean && \
+  rm -rf /tmp/* /var/tmp/* /root/.npm /root/.cache /var/lib/apt/lists/*
 
 # Add Docker HEALTHCHECK
 HEALTHCHECK --interval=60s --timeout=10s --start-period=60s --retries=5 \
   CMD curl --fail http://localhost:8283/health || exit 1
 
 CMD ["matterbridge", "-docker"]
+# ─────────────── END ───────────────
