--- a/docker/Dockerfile.dev
+++ b/docker/Dockerfile.dev
@@ -104,7 +104,12 @@ RUN apt-get update && \
     node -v && \
     npm -v && \
     npm list -g && \
-    rm -rf /tmp/* /var/tmp/* /root/.npm /root/.cache /var/lib/apt/lists/*
+    rm -rf /tmp/* /var/tmp/* /root/.npm /root/.cache /var/lib/apt/lists/* && \
+    find /usr/local/lib/node_modules -type d -name ".github" -exec rm -rf {} + && \
+    find /usr/local/lib/node_modules -type d -name ".vscode" -exec rm -rf {} + && \
+    find /usr/local/lib/node_modules -type f \( -name "*.ts" -o -name "*.map" -o -name "*.d.ts" -o -name "LICENSE" -o -name "LICENSE.txt" -o -name "*.md" \) -delete && \
+    find /usr/local/lib/node_modules/matterbridge/node_modules/@matter -type d -name "src" -exec rm -rf {} + && \
+    find /usr/local/lib/node_modules/matterbridge/node_modules/@matter -type d -name "cjs" -exec rm -rf {} +
 
 # Add Docker HEALTHCHECK
 HEALTHCHECK --interval=60s --timeout=10s --start-period=60s --retries=5 \
