--- a/docker/Dockerfile.main
+++ b/docker/Dockerfile.main
@@ -25,10 +25,9 @@ COPY --from=builder /app/package.json ./
 COPY --from=builder /app/dist ./dist
 COPY --from=builder /app/node_modules ./node_modules
 COPY --from=builder /app/frontend/build ./frontend/build
-RUN npm link
 
-# Install curl for docker health
-RUN apt-get update && \
+RUN npm link && 
+    apt-get update && \
     apt-get install -y --no-install-recommends curl && \
     apt-get clean && \
     npm install --global --omit=dev matterbridge-zigbee2mqtt \
@@ -44,12 +43,18 @@ RUN apt-get update && \
         matterbridge-eve-energy \
         matterbridge-eve-room \
         matterbridge-eve-weather && \
+    npm cache clean --force && \
     rm -rf /tmp/* /var/tmp/* /root/.npm /root/.cache /var/lib/apt/lists/* && \
     find /usr/local/lib/node_modules -type d -name ".github" -exec rm -rf {} + && \
     find /usr/local/lib/node_modules -type d -name ".vscode" -exec rm -rf {} + && \
     find /usr/local/lib/node_modules -type f \( -name "*.ts" -o -name "*.js.map" -o -name "*.d.ts" -o -name "*.d.ts.map" -o -name "LICENSE" -o -name "LICENSE.txt" -o -name "*.md" \) -delete && \
     find /usr/local/lib/node_modules/matterbridge/node_modules/@matter -type d -name "src" -exec rm -rf {} + && \
-    find /usr/local/lib/node_modules/matterbridge/node_modules/@matter -type d -name "cjs" -exec rm -rf {} +
+    find /usr/local/lib/node_modules/matterbridge/node_modules/@matter -type d -name "cjs" -exec rm -rf {} + && \
+    find ./node_modules -type d -name ".github" -exec rm -rf {} + && \
+    find ./node_modules -type d -name ".vscode" -exec rm -rf {} + && \
+    find ./node_modules -type f \( -name "*.ts" -o -name "*.js.map" -o -name "*.d.ts" -o -name "*.d.ts.map" -o -name "LICENSE" -o -name "LICENSE.txt" -o -name "*.md" \) -delete && \
+    find ./node_modules/matterbridge/node_modules/@matter -type d -name "src" -exec rm -rf {} + && \
+    find ./node_modules/matterbridge/node_modules/@matter -type d -name "cjs" -exec rm -rf {} +
 
 # Add Docker HEALTHCHECK
 HEALTHCHECK --interval=60s --timeout=10s --start-period=60s --retries=5 \
