--- a/docker/Dockerfile.main
+++ b/docker/Dockerfile.main
@@ -53,8 +53,8 @@ RUN npm link && \
     find ./node_modules -type d -name ".github" -exec rm -rf {} + && \
     find ./node_modules -type d -name ".vscode" -exec rm -rf {} + && \
     find ./node_modules -type f \( -name "*.ts" -o -name "*.js.map" -o -name "*.d.ts" -o -name "*.d.ts.map" -o -name "LICENSE" -o -name "LICENSE.txt" -o -name "*.md" \) -delete && \
-    find ./node_modules/matterbridge/node_modules/@matter -type d -name "src" -exec rm -rf {} + && \
-    find ./node_modules/matterbridge/node_modules/@matter -type d -name "cjs" -exec rm -rf {} +
+    find ./node_modules/@matter -type d -name "src" -exec rm -rf {} + && \
+    find ./node_modules/@matter -type d -name "cjs" -exec rm -rf {} +
 
 # Add Docker HEALTHCHECK
 HEALTHCHECK --interval=60s --timeout=10s --start-period=60s --retries=5 \
