--- a/.github/workflows/docker-buildx-dev.yml
+++ b/.github/workflows/docker-buildx-dev.yml
@@ -7,6 +7,9 @@ on:
     paths-ignore:
       - '/screenshot/*'
       - '/*.md'
+  schedule:
+    # Runs daily at 00:00 UTC
+    - cron: '0 0 * * *'
 
 jobs:
   build-and-push:
