Add step to inspect pushed Docker manifest in build workflows

--- a/.github/workflows/docker-buildx-dev.yml
+++ b/.github/workflows/docker-buildx-dev.yml
@@ -59,5 +59,7 @@ jobs:
             -f docker/Dockerfile.dev \
             -t luligu/matterbridge:dev \
             --push .
-          docker manifest inspect luligu/matterbridge:dev
         timeout-minutes: 60
+
+      - name: Inspect pushed manifest
+        run: docker manifest inspect luligu/matterbridge:dev
