--- a/.github/workflows/publish-dev-daily.yml
+++ b/.github/workflows/publish-dev-daily.yml
@@ -42,11 +42,13 @@ jobs:
       - name: Install dependencies
         run: npm ci
 
-      - name: Lint & build & test
+      - name: Lint & test & build
         run: |
           npm run lint
+          npm run build
+          npm install -g .
           npm run test
-          npm run buildProduction
+          npm run cleanBuildProduction
           npm pkg delete devDependencies scripts types
           npx rimraf ./node_modules
           npm install --omit=dev
