--- a/.github/workflows/docker-buildx-main.yml
+++ b/.github/workflows/docker-buildx-main.yml
@@ -19,12 +19,16 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout code
+      - name: Checkout code to main branch
         uses: actions/checkout@v4
+        with:
+          ref: main
 
-      - uses: actions/setup-node@v4
+      - name: Set up Node.js & registry
+        uses: actions/setup-node@v4
         with:
           node-version: '22.x'
+          registry-url: 'https://registry.npmjs.org'
 
       - name: Log in to Docker Hub
         uses: docker/login-action@v3
