--- a/docker/Dockerfile.main
+++ b/docker/Dockerfile.main
@@ -12,7 +12,9 @@ RUN npm ci && \
     npm run buildProduction && \
     npm pkg delete devDependencies scripts types && \
     npx rimraf ./node_modules && \
-    npm install --omit=dev
+    npm install --omit=dev && \
+    npm shrinkwrap && \
+    npm pack 
 
 # ─────────────── RUNTIME STAGE ───────────────
 FROM node:22-bookworm-slim AS release
@@ -21,12 +23,14 @@ FROM node:22-bookworm-slim AS release
 ENV DEBIAN_FRONTEND=noninteractive
 
 WORKDIR /app
-COPY --from=builder /app/package.json ./
-COPY --from=builder /app/dist ./dist
-COPY --from=builder /app/node_modules ./node_modules
-COPY --from=builder /app/frontend/build ./frontend/build
+COPY --from=builder /app/*.tgz .
+# COPY --from=builder /app/package.json ./
+# COPY --from=builder /app/dist ./dist
+# COPY --from=builder /app/node_modules ./node_modules
+# COPY --from=builder /app/frontend/build ./frontend/build
 
-RUN npm link && \
+RUN npm install -g --omit=dev *.tgz && \
+    rm *.tgz && \
     apt-get update && \
     apt-get install -y --no-install-recommends curl && \
     apt-get clean && \
@@ -45,18 +49,16 @@ RUN npm link && \
         matterbridge-eve-weather && \
     npm uninstall -g corepack && \
     npm cache clean --force && \
+    node -v && \
+    npm -v && \
+    npm list -g && \
     rm -rf /tmp/* /var/tmp/* /root/.npm /root/.cache /var/lib/apt/lists/* && \
     find /usr/local/lib/node_modules -type d -name ".github" -exec rm -rf {} + && \
     find /usr/local/lib/node_modules -type d -name ".vscode" -exec rm -rf {} + && \
+    find /usr/local/lib/node_modules -type d -name "docs" -exec rm -rf {} + && \
     find /usr/local/lib/node_modules -type f \( -name "*.ts" -o -name "*.js.map" -o -name "*.d.ts" -o -name "*.d.ts.map" -o -name "LICENSE" -o -name "LICENSE.txt" -o -name "*.md" \) -delete && \
     find /usr/local/lib/node_modules/matterbridge/node_modules/@matter -type d -name "src" -exec rm -rf {} + && \
-    find /usr/local/lib/node_modules/matterbridge/node_modules/@matter -type d -name "cjs" -exec rm -rf {} + && \
-    find ./node_modules -type d -name ".github" -exec rm -rf {} + && \
-    find ./node_modules -type d -name ".vscode" -exec rm -rf {} + && \
-    find ./node_modules -type f \( -name "*.ts" -o -name "*.js.map" -o -name "*.d.ts" -o -name "*.d.ts.map" -o -name "LICENSE" -o -name "LICENSE.txt" -o -name "*.md" \) -delete && \
-    find ./node_modules/@matter -type d -name "src" -exec rm -rf {} + && \
-    find ./node_modules/@matter -type d -name "cjs" -exec rm -rf {} + && \
-    find /usr/local/lib/node_modules -type d -name "docs" -exec rm -rf {} +
+    find /usr/local/lib/node_modules/matterbridge/node_modules/@matter -type d -name "cjs" -exec rm -rf {} +
 
 # Add Docker HEALTHCHECK
 HEALTHCHECK --interval=60s --timeout=10s --start-period=60s --retries=5 \
