Jest tests on frontend.

--- a/package.json
+++ b/package.json
@@ -121,7 +121,8 @@
     "test:deviceManager": "node --no-warnings --experimental-vm-modules node_modules/jest/bin/jest.js --verbose --coverage deviceManager.test.ts",
     "test:utils": "node --no-warnings --experimental-vm-modules node_modules/jest/bin/jest.js --verbose --coverage utils.test.ts",
     "test:colorUtils": "node --no-warnings --experimental-vm-modules node_modules/jest/bin/jest.js --verbose --coverage colorUtils.test.ts",
-    "test:frontend": "node --no-warnings --experimental-vm-modules node_modules/jest/bin/jest.js --verbose --coverage frontend.test.ts",
+    "test:frontend:express": "node --no-warnings --experimental-vm-modules node_modules/jest/bin/jest.js --verbose --coverage frontend.express.test.ts",
+    "test:frontend:websocket": "node --no-warnings --experimental-vm-modules node_modules/jest/bin/jest.js --verbose --coverage frontend.websocket.test.ts",
     "lint": "eslint --max-warnings=0 .",
     "lint:fix": "eslint --fix --max-warnings=0 .",
     "format": "prettier --write \"**/*.{js,jsx,ts,tsx,json,css,md}\"",
