--- a/docker/Dockerfile.dev
+++ b/docker/Dockerfile.dev
@@ -6,7 +6,11 @@ ENV DEBIAN_FRONTEND=noninteractive
 
 # Install git to clone the repositories
 RUN apt-get update && \
-    apt-get install -y --no-install-recommends git
+    apt-get install -y --no-install-recommends \
+    git \
+    python3 \
+    python3-dev \
+    build-essential
 
 WORKDIR /app
 COPY ./package.json ./package-lock.json ./tsconfig.json ./tsconfig.production.json ./.npmignore ./
