--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "matterbridge",
-  "version": "3.0.1",
+  "version": "3.0.2",
   "description": "Matterbridge plugin manager for Matter",
   "author": "https://github.com/Luligu",
   "license": "Apache-2.0",
@@ -105,9 +105,9 @@
     "start:controller": "node ./dist/cli.js -controller",
     "start:edge": "node ./dist/cli.js -edge -debug -logger debug -matterlogger debug",
     "start:help": "node ./dist/cli.js -help",
-    "test": "node --no-warnings --experimental-vm-modules node_modules/jest/bin/jest.js",
-    "test:coverage": "node --no-warnings --experimental-vm-modules node_modules/jest/bin/jest.js --coverage",
-    "test:verbose": "node --no-warnings --experimental-vm-modules node_modules/jest/bin/jest.js --verbose",
+    "test": "node --no-warnings --experimental-vm-modules node_modules/jest/bin/jest.js --maxWorkers=100%",
+    "test:coverage": "node --no-warnings --experimental-vm-modules node_modules/jest/bin/jest.js --coverage --maxWorkers=100%",
+    "test:verbose": "node --no-warnings --experimental-vm-modules node_modules/jest/bin/jest.js --verbose --maxWorkers=100%",
     "test:watch": "node --no-warnings --experimental-vm-modules node_modules/jest/bin/jest.js --watch",
     "test:cli": "node --no-warnings --experimental-vm-modules node_modules/jest/bin/jest.js --verbose --coverage cli.test.ts",
     "test:matterbridge": "node --no-warnings --experimental-vm-modules node_modules/jest/bin/jest.js --verbose --coverage matterbridge.test.ts",
@@ -119,6 +119,9 @@
     "test:platform": "node --no-warnings --experimental-vm-modules node_modules/jest/bin/jest.js --verbose --coverage matterbridgePlatform.test.ts matterbridgeAccessoryPlatform.test.ts matterbridgeDynamicPlatform.test.ts",
     "test:pluginManager": "node --no-warnings --experimental-vm-modules node_modules/jest/bin/jest.js --verbose --coverage pluginManager.test.ts",
     "test:deviceManager": "node --no-warnings --experimental-vm-modules node_modules/jest/bin/jest.js --verbose --coverage deviceManager.test.ts",
+    "test:hex": "node --no-warnings --experimental-vm-modules node_modules/jest/bin/jest.js --verbose --coverage hex.test.ts",
+    "test:wait": "node --no-warnings --experimental-vm-modules node_modules/jest/bin/jest.js --verbose --coverage wait.test.ts",
+    "test:network": "node --no-warnings --experimental-vm-modules node_modules/jest/bin/jest.js --verbose --coverage network.test.ts",
     "test:utils": "node --no-warnings --experimental-vm-modules node_modules/jest/bin/jest.js --verbose --coverage utils.test.ts",
     "test:colorUtils": "node --no-warnings --experimental-vm-modules node_modules/jest/bin/jest.js --verbose --coverage colorUtils.test.ts",
     "test:frontend:express": "node --no-warnings --experimental-vm-modules node_modules/jest/bin/jest.js --verbose --coverage frontend.express.test.ts",
@@ -130,7 +133,7 @@
     "clean": "npx rimraf tsconfig.tsbuildinfo ./dist",
     "cleanBuild": "npm run clean && npm run build",
     "cleanBuildProduction": "npm run clean && npm run buildProduction",
-    "deepClean": "npx rimraf tsconfig.tsbuildinfo package-lock.json npm-shrinkwrap.json ./dist ./node_modules",
+    "deepClean": "npx rimraf tsconfig.tsbuildinfo package-lock.json npm-shrinkwrap.json ./dist ./node_modules ./coverage ./test ./matterstorage ./matterstorage.backup",
     "deepCleanBuild": "npm run deepClean && npm install && npm run build && npm link && npx jest --clearCache",
     "runMeBeforePublish": "npm run lint && npm run format && npm run build && npm run test",
     "git:status": "git status && git branch -vv && git diff dev origin/dev",
@@ -168,11 +171,11 @@
     "@types/express": "5.0.1",
     "@types/jest": "29.5.14",
     "@types/multer": "1.4.12",
-    "@types/node": "22.15.12",
+    "@types/node": "22.15.17",
     "@types/ws": "8.18.1",
-    "eslint-config-prettier": "10.1.2",
+    "eslint-config-prettier": "10.1.5",
     "eslint-plugin-jest": "28.11.0",
-    "eslint-plugin-n": "17.17.0",
+    "eslint-plugin-n": "17.18.0",
     "eslint-plugin-prettier": "5.4.0",
     "eslint-plugin-react": "7.37.5",
     "eslint-plugin-react-hooks": "5.2.0",
@@ -180,6 +183,6 @@
     "prettier": "3.5.3",
     "ts-jest": "29.3.2",
     "typescript": "5.8.3",
-    "typescript-eslint": "8.32.0"
+    "typescript-eslint": "8.32.1"
   }
 }
