--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "matterbridge",
-  "version": "3.0.3",
+  "version": "3.0.4",
   "description": "Matterbridge plugin manager for Matter",
   "author": "https://github.com/Luligu",
   "license": "Apache-2.0",
@@ -143,18 +143,18 @@
     "archiver": "7.0.1",
     "express": "5.1.0",
     "glob": "11.0.2",
-    "multer": "1.4.5-lts.2",
+    "multer": "2.0.0",
     "node-ansi-logger": "3.0.1",
     "node-persist-manager": "1.0.8",
     "ws": "8.18.2"
   },
   "devDependencies": {
-    "@eslint/js": "9.26.0",
+    "@eslint/js": "9.27.0",
     "@types/archiver": "6.0.3",
-    "@types/express": "5.0.1",
+    "@types/express": "5.0.2",
     "@types/jest": "29.5.14",
     "@types/multer": "1.4.12",
-    "@types/node": "22.15.18",
+    "@types/node": "22.15.21",
     "@types/ws": "8.18.1",
     "eslint-config-prettier": "10.1.5",
     "eslint-plugin-jest": "28.11.0",
@@ -164,7 +164,7 @@
     "eslint-plugin-react-hooks": "5.2.0",
     "jest": "29.7.0",
     "prettier": "3.5.3",
-    "ts-jest": "29.3.3",
+    "ts-jest": "29.3.4",
     "typescript": "5.8.3",
     "typescript-eslint": "8.32.1"
   }
